tests/reference/asr_preprocess-cpp3-1719443.stderr
input:7:10 semantic error: Variable 'xx' not declared
print *, xx, X123, y
         ^~
